# proteintracer

./: .hgignore  CMakeLists.txt
lib/Fl_Table-3.12/: CMakeLists.txt
lib/tinyxml/: CMakeLists.txt  tinyxml.h
src/: Analysis.cxx  Analysis.h  Analyzer.h  CMakeLists.txt  ImageSeriesSet.cxx  ImageSeriesSet.h  ParameterSet.cxx  ParameterSet.h  Scan.cxx  Scan.h  common.h  images.h
src/analyzers/: AnalyzerRegistry.cxx  AnalyzerRegistry.h  CMakeLists.txt  IntensityVisualization.h  LabelVisualization.h  SegmentVisualization.h  TestAnalyzer.cxx  TestAnalyzer.h  TestVisualizer.cxx  TestVisualizer.h  ThresholdVisualization.h  WatershedAnalyzer.cxx  WatershedAnalyzer.h  WatershedFilterPipeline.cxx  WatershedFilterPipeline.h  WatershedVisualizer.cxx  WatershedVisualizer.h
src/assay_editor/: AssayDialog.cxx  AssayDialog.h  CMakeLists.txt  MainWindow.cxx  MainWindow.h  ScanWizard.cxx  ScanWizard.h
src/assay_runner/: AssayRunner.cxx  AssayRunner.h  CMakeLists.txt
src/evaluator/: AnalysisImageViewer.cxx  AnalysisImageViewer.h  CMakeLists.txt  ChartParameters.cxx  ChartParameters.h  ChartParametersEditor.cxx  ChartParametersEditor.h  ChartViewer.cxx  ChartViewer.h  Evaluator.cxx  Evaluator.h  FeatureStatistics.cxx  FeatureStatistics.h  Histogram.cxx  Histogram.h
src/filters/: AnalysisImageFilter.h  AnalysisImageFilter.txx  AnalysisVisualizationImageFilter.cxx  AnalysisVisualizationImageFilter.h  CMakeLists.txt  LabelToColorFunctor.h  LabelToColorFunctor.txx  LabelVisualizationImageFilter.h  LogarithmImageFilter.h  RescaleIntensityRGBImageFilter.h  RescaleIntensityRGBImageFilter.txx  SegmentKey.h  SegmentKeyToColorFunctor.cxx  SegmentKeyToColorFunctor.h  SegmentRingsImageFilter.h  SegmentRingsImageFilter.txx  SegmentSelectionAndMergingImageFilter.h  SegmentSelectionAndMergingImageFilter.txx  SegmentSizeImageFilter.h  SegmentSizeImageFilter.txx  SegmentVisualizationImageFilter.h  SegmentVisualizationImageFilter.txx  ThresholdVisualizationImageFilter.h  ThresholdVisualizationImageFilter.txx
src/gui/: AboutDialog.cxx  AboutDialog.h  CMakeLists.txt  ImageSelector.cxx  ImageSelector.h  ImageViewer.cxx  ImageViewer.h  ParameterTable.cxx  ParameterTable.h  common.h
src/io/: AnalysisIO.cxx  AnalysisIO.h  AssayIO.cxx  AssayIO.h  CMakeLists.txt  ScanIO.cxx  ScanIO.h  export.cxx  export.h
